<resources>
    <string name="app_name">TwoDo</string>
    <string name="fragment_to_do_lists_placeholder">Nothing2Do?\n Find something!</string>
    <string name="fragment_to_do_tasks_placeholder">Add some things</string>
    <string name="fragment_to_do_list_fab_content_description">Tap to add a new list</string>
    <string name="btn_close">X</string>
    <string name="tdl_edit_date_button">When?</string>
    <string name="tdl_edit_save_button">Save</string>
    <string name="tdl_edit_cancel_button">Cancel</string>
    <string name="tdt_edit_save_button">Save</string>
    <string name="tdt_edit_cancel_button">Cancel</string>
    <string name="tdl_edit_when_picker_title">When do you want 2 do it?</string>
    <string name="tdl_due_late">Too late now!</string>
    <string name="tdt_delete_button">Delete</string>
    <string name="tdt_edit_button">Edit</string>
    <string name="tdl_edit_name_hint">What do you wanna do?</string>
    <string name="tdt_edit_name_hint">What do you wanna do?</string>
    <string name="tdl_header_completion">Done</string>
    <string name="tdl_header_name">What</string>
    <string name="tdl_header_due_at">When</string>
    <string name="tdl_edit_validate_name">List name is required!</string>
    <string name="tdt_edit_validate_name">Task is required!</string>

</resources>