<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.lelandcer.twodo.fragments.TwoDoTasksFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/task_margin_top"
        android:background="@color/black" />

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/task_margin_start"
        android:background="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/task_margin_top">
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gl_tdt_vertical"
            app:layout_constraintGuide_begin="@dimen/task_margin_start"
            android:orientation="vertical"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tdt_due_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/task_margin_date_top"
            android:layout_marginStart="@dimen/task_margin_date_start"
            android:text="Today"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tdt_due_at_formatted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_tdt_due_at"
            app:layout_constraintTop_toBottomOf="@id/tv_tdt_due_at"
            android:layout_marginTop="@dimen/task_margin_date_space"
            android:text="Fri, 12/21 \n 20201"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tdt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/gl_tdt_vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/task_margin_frame"
            android:layout_marginStart="@dimen/task_margin_frame"
            android:text="IMportan task"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tdt_completion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/gl_tdt_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/task_margin_frame"
            android:layout_marginStart="@dimen/task_margin_frame"
            android:text="2/2"
            />

        <Button
            android:id="@+id/btn_tdt_task_edit"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tdt_edit_button"
            app:layout_constraintTop_toBottomOf="@id/btn_tdt_task_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/task_margin_frame"
            />
        <Button
            android:id="@+id/btn_tdt_task_delete"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tdt_delete_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/task_margin_frame"
            android:layout_marginBottom="@dimen/task_margin_frame"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tdt_tasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/task_margin_start"
        android:layout_marginTop="@dimen/task_margin_top"
        android:layout_marginEnd="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:context=".features.task.ToDoTasksFragment"
        tools:listitem="@layout/fragment_to_do_tasks">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_tdl_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/task_margin_frame"
        android:contentDescription="@string/fragment_to_do_list_fab_content_description"
        app:srcCompat="@drawable/ic_baseline_add_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>